src/objects/TracHier__Master_Account__c.object
<CustomObject>
    <fields>
        <fullName>Open_ARR__c</fullName>
        <inlineHelpText>This field is part of the Traction Hierarchy app implementation. 
JIRA: SFDCSPT-148</inlineHelpText>
        <label>Open ARR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TracHier__Accounts_Closed_Won__c</fullName>
        <label>Accounts Closed Won</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TracHier__Activities__c</fullName>
        <label>Activities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TracHier__Closed_Won_Opp_Amount__c</fullName>
        <label>Closed Won Opp Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TracHier__Closed_Won_Opp_Avg__c</fullName>
        <label>Closed Won Opp Avg</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TracHier__Closed_Won_Opps__c</fullName>
        <label>Closed Won Opps</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TracHier__Contacts__c</fullName>
        <label>Contacts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TracHier__DnB_Whitespace_Count__c</fullName>
        <label>D&amp;B Whitespace Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TracHier__Leads__c</fullName>
        <label>Leads</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TracHier__Master_Account_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Complete Company ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>TracHier__Member_Count__c</fullName>
        <label>Number of Accounts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TracHier__Open_Cases__c</fullName>
        <label>Open Cases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TracHier__Open_Opp_Amount__c</fullName>
        <label>Open Opp Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TracHier__Open_Opps__c</fullName>
        <label>Open Opps</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TracHier__Opp_Contact_Roles__c</fullName>
        <label>Opp Contact Roles</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TracHier__Opp_Products_Sold__c</fullName>
        <label>Opp Products Sold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TracHier__Owner_Count__c</fullName>
        <label>Owner Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Complete Company</label>
    <nameField>
        <label>Complete Company Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Complete Companies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>